[project]
name = "cli-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "SeshuTarapatla", email = "seshu.tarapatla@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
cli-utils = "cli_utils:main"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"
